31.01.26 | Finaler Stand.